# splunkhec

./: .gitignore  Pipfile  README.md  SECURITY.MD  omsplunkhec3.py  pyproject.toml  test_class.py  test_health.py  test_loguru.py  test_utilities.py
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
splunkhec/: __init__.py  health.py  splunklogger.py  utilities.py
