[tool.poetry]
name = "splunkhec"
version = "0.0.1"
description = "Splunk HEC library"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
pytest = "^7.1.2"
mypy = "^0.971"
black = "^22.8.0"
requests-mock = "^1.9.3"
types-requests = "^2.28.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
disable="W0511"
max-line-length=200
