[tool.poetry]
name = "splunkhec"
version = "0.0.1"
description = "Splunk HEC library"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"
pytest = "^7.1.3"
mypy = "^0.981"
black = "^22.10.0"
requests-mock = "^1.10.0"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
disable="W0511"
max-line-length=200
