
[project]
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.0",    #tricking TOML into not reflowing
    "requests>=2.28.1",
]
name = "splunkhec"
version = "0.0.1"
description = "Splunk HEC library"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "mypy>=1.0",
    "requests-mock>=1.10.0",
    "types-requests>=2.28.11",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pylint.MASTER]
disable = "W0511"
max-line-length = 200
